customized flexbox starter page

--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
        
         <section class="wrapper">
             <div class="div-1">
-                Div 1
+                Lorem ipsum dolor amet williamsburg gochujang pinterest small batch kale chips, organic whatever single-origin coffee blog echo park helvetica lyft vinyl pug. 
             </div>
             <div class="div-2">
-                Div 2
+                Offal echo park pabst ethical, disrupt food truck iceland cronut craft beer ramps prism unicorn twee knausgaard everyday carry.  Marfa distillery quinoa celiac pork belly glossier blue bottle disrupt.
             </div>
             <div class="div-3">
-                Div 3
+                Twee four loko ugh photo booth paleo biodiesel gluten-free austin offal tofu meh poutine. VHS vinyl meditation, hashtag cardigan aesthetic stumptown brooklyn blog helvetica tumblr literally blue bottle.
             </div>
         </section>    
 
