added heading and social area

--- a/index.html
+++ b/index.html
@@ -13,14 +13,22 @@
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
-        <link href='http://fonts.googleapis.com/css?family=Lora:700' rel='stylesheet' type='text/css'>
-        <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700' rel='stylesheet' type='text/css'>
+        <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro|Vesper+Libre&display=swap" rel="stylesheet">
     </head>
     <body>
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-       
+       <section class="heading">
+           <div class="heading-hello">
+            Hi, I'm Dalia
+            </div>
+            <div class="heading-description">
+            I am a web designer, developer, writer, and Python programmer.
+            </div>
+       </section>
+
+
         <section class="wrapper">
             <div class="div-1">
                 Lorem ipsum dolor amet williamsburg gochujang pinterest small batch kale chips, organic whatever single-origin coffee blog echo park helvetica lyft vinyl pug. 
@@ -32,6 +40,14 @@
                 Twee four loko ugh photo booth paleo biodiesel gluten-free austin offal tofu meh poutine. VHS vinyl meditation, hashtag cardigan aesthetic stumptown brooklyn blog helvetica tumblr literally blue bottle.
             </div>
         </section>    
+
+        <section>
+            <div class="social">
+                <a href="http://www.github.com"><img src="apple-touch-icon.png" alt="Github" target="_blank"></a>
+                <a href="http://www.linkedin.com"><img src="apple-touch-icon.png" alt="linkedin" target="_blank"></a>
+                <a href="http://www.pinterest.com"><img src="apple-touch-icon.png" alt="pinterest" target="_blank"></a>
+            </div>
+        </section>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')</script>
